# cjm-transcription-plugin-gemini

./: .gitignore  README.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_transcription_plugin_gemini/: _modidx.py  meta.py  plugin.py
examples/: api-testing.ipynb  test_integration.ipynb
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
