[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcription-plugin-gemini"
dynamic = ["version"]
description = "Google Gemini API plugin for the cjm-transcription-plugin-system library - provides speech-to-text transcription with configurable model selection and parameter control."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'pandas', 'cjm_transcription_plugin_system>=0.0.19', 'cjm_ffmpeg_utils>=0.0.5', 'google-genai', 'numpy', 'soundfile']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcription-plugin-gemini"
Documentation = "https://cj-mills.github.io/cjm-transcription-plugin-gemini"

[project.entry-points.nbdev]
cjm_transcription_plugin_gemini = "cjm_transcription_plugin_gemini._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcription_plugin_gemini.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcription_plugin_gemini*"]

[tool.nbdev]
